WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159998
REGRESSION: Plugin replaced YouTube Flash videos always have the same width
https://bugs.webkit.org/show_bug.cgi?id=159998
Summary
REGRESSION: Plugin replaced YouTube Flash videos always have the same width
Daniel Bates
Reported
2016-07-20 16:43:55 PDT
Consider a page with the following markup: <!DOCTYPE html> <html> <body> <embed width="640" height="480" type="application/x-shockwave-flash" src="
https://www.youtube.com/v/UF8uR6Z6KLc
"> </body> </html> If you view this page with plugin replacement enabled (enabled by default on iOS) then the computed width of the video is auto and is clearly less than the specified 640px.
Attachments
Example
(160 bytes, text/html)
2016-07-20 16:45 PDT
,
Daniel Bates
no flags
Details
Patch and Layout Tests
(13.79 KB, patch)
2016-07-20 16:52 PDT
,
Daniel Bates
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Daniel Bates
Comment 1
2016-07-20 16:45:13 PDT
Created
attachment 284170
[details]
Example For convenience, a page with the markup in
comment 0
.
Daniel Bates
Comment 2
2016-07-20 16:52:33 PDT
Created
attachment 284171
[details]
Patch and Layout Tests
Daniel Bates
Comment 3
2016-07-20 17:24:14 PDT
***
Bug 159973
has been marked as a duplicate of this bug. ***
Radar WebKit Bug Importer
Comment 4
2016-07-20 18:05:35 PDT
<
rdar://problem/27462285
>
Daniel Bates
Comment 5
2016-07-21 14:07:55 PDT
Committed
r203522
: <
http://trac.webkit.org/changeset/203522
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug