Source/WebCore/html/shadow/YouTubeEmbedShadowElement.cpp
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2012, 2014 Apple Inc. All rights reserved.
+ * Copyright (C) 2012-2016 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -26,7 +26,7 @@
 #include "config.h"
 #include "YouTubeEmbedShadowElement.h"
 
-#include "HTMLEmbedElement.h"
+#include "RenderBlockFlow.h"
 
 namespace WebCore {
 
@@ -39,11 +39,11 @@ YouTubeEmbedShadowElement::YouTubeEmbedShadowElement(Document& document)
     : HTMLDivElement(HTMLNames::divTag, document)
 {
     setPseudo(AtomicString("-webkit-plugin-replacement", AtomicString::ConstructFromLiteral));
+}
 
-    setInlineStyleProperty(CSSPropertyDisplay, CSSValueInlineBlock);
-    setInlineStyleProperty(CSSPropertyPosition, CSSValueRelative);
-    setInlineStyleProperty(CSSPropertyWidth, CSSValue100);
-    setInlineStyleProperty(CSSPropertyHeight, CSSValue100);
+RenderPtr<RenderElement> YouTubeEmbedShadowElement::createElementRenderer(RenderStyle&& style, const RenderTreePosition&)
+{
+    return createRenderer<RenderBlockFlow>(*this, WTFMove(style));
 }
 
 }
